Cleaned up compile options